--- a/frontend/src/common-components/PostPreview/PostPreview.module.css
+++ b/frontend/src/common-components/PostPreview/PostPreview.module.css
@@ -7,6 +7,7 @@
 
     background-color: var(--light-orange);
     border-bottom: 16px solid var(--primary);
+    cursor: pointer;
 }
 
 .post * {
@@ -30,6 +31,12 @@
 .header {
     margin-top: 16px;
     margin-bottom: 16px;
+
+    font-size: 24px;
+
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .author {
