--- a/frontend/src/pages/Blog/components/PostWithImage/PostWithImage.module.css
+++ b/frontend/src/pages/Blog/components/PostWithImage/PostWithImage.module.css
@@ -10,7 +10,7 @@
 }
 
 .img {
-    max-width: 100%;
+    width: 50%;
 }
 
 .text {
@@ -30,7 +30,7 @@
     margin-top: 32px;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1000px) {
     .post {
         flex-wrap: wrap;
     }
@@ -39,10 +39,18 @@
         margin-left: 0;
         margin-top: 16px;
     }
+
+    .img {
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 500px) {
     .post {
         padding: 12px;
     }
+}
+
+.post_dummy {
+    height: 400px;
 }
