--- a/frontend/src/pages/Post/Post.module.css
+++ b/frontend/src/pages/Post/Post.module.css
@@ -60,8 +60,17 @@
     color: var(--black);
 }
 
+.content h2 {
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 133%;
+    letter-spacing: -0.01em;
+    text-transform: uppercase;
+    color: var(--black);
+}
+
 .content ul {
-    margin: 32px 0;
+    margin: 16px 0 32px 0;
     padding: 0;
 }
 
